--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,3 +1,13 @@
+/* fonts */
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v14/k3k702ZOKiLJc3WVjuplzBampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
 /* Universal Styles */
 
 html {
@@ -5,16 +15,28 @@ html {
   font-family: 'Gotham', sans-serif;
 }
 
-.image-container {
+.image_container {
   overflow: hidden;
 }
 
-.image-container img {
+.image_container img {
   display: block;
   width: 100%;
   height: auto;
 }
 
+.left_side {
+}
+
+.right_side {
+
+}
+
+.content {
+  max-width: 1600px;
+  display: flex;
+  margin: 0 auto;
+}
 
 /* Header */
 
@@ -22,6 +44,7 @@ header {
   height: 64px;
   display: flex;
   justify-content: space-between;
+  color: hsl(220, 100%, 30%);
 }
 
 .logo {
@@ -44,6 +67,10 @@ header {
   font-weight: 700;
 }
 
+.logo span strong{
+  margin-right: 2px;
+}
+
 nav {
   display: inline-flex;
   align-items: center;
@@ -52,13 +79,67 @@ nav {
 
 nav span a {
   font-size: 1.25rem;
-  padding: 8px;
+  padding: 12px 8px;
+  color: inherit;
 }
 
 nav span a:hover {
-  color: #0456d1;
-  background-color: #e3e7ed;
+  color: hsl(220, 100%, 100%);
+  background-color: hsl(220, 20%, 80%);
 }
 
 nav span a {
+}
+
+/* Jumbotron */
+
+.jumbotron {
+  background-color: hsl(220, 10%, 95%);
+}
+
+.jumbotron .image_container {
+  width: 60%;
+/*  max-width: 800px; */
+  padding: 2rem 1.5rem;
+
+}
+
+.jumbotron .right_side {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 500px;
+
+
+}
+.jumbotron .right_side .text {
+}
+
+.jumbotron .right_side .text h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  font-family: 'Open sans';
+  padding-bottom: 1rem;
+}
+
+.jumbotron .right_side .text p {
+  font-size: 1.5rem;
+  line-height: 1.3;
+  padding-bottom: 1rem;
+  max-width: 480px;
+}
+
+.jumbotron .right_side .button {
+  text-align: center;
+  padding: 1rem 0px;
+  background-color: hsl(220, 50%, 30%);
+  color: white;
+  width: 70%;
+  font-size: 1.25rem;
+  transition: background-color 200ms ease 100ms, opacity 100ms ease 100ms;
+}
+
+.jumbotron .right_side .button:hover {
+  background-color: hsl(220, 80%, 40%);
+  opacity: .9;
 }
