--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,34 +1,3 @@
-/* fonts */
-
-/*
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v14/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url(https://fonts.gstatic.com/s/opensans/v14/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v14/k3k702ZOKiLJc3WVjuplzBampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-}
-
-*/
-
-/* Universal Styles */
-
 html {
   font-size: 16px;
   font-family: 'Montserrat','Gotham', sans-serif;
@@ -71,14 +40,6 @@ html {
   display: none;
 }
 
-/*
-
-.wide {
-  max-width: 1200px;
-}
-
-*/
-
    /* global text styles */
 
 .center {
@@ -115,7 +76,6 @@ h3 {
 
 .event {
   display: flex;
-
 }
 
 .event .image_container {
@@ -229,12 +189,12 @@ nav span a {
   color: inherit;
 }
 
-nav span a:hover, header div a:hover {
+nav span a:hover, header div.mobile:hover {
   color: hsl(220, 100%, 100%);
   background-color: hsl(220, 20%, 80%);
 }
 
-nav span a:active, header div a:active {
+nav span a:active, header div.mobile:active {
   background-color: hsl(220, 80%, 60%);
   opacity: .9;
 }
@@ -243,8 +203,17 @@ nav span a:active, header div a:active {
   header {
     justify-content: space-around;
   }
+
   #logo_name, nav {
     display: none;
+  }
+
+  header div {
+    padding: 1.5rem;
+  }
+
+  #colmar_logo {
+    padding: 0;
   }
 
 }
@@ -290,9 +259,12 @@ nav span a:active, header div a:active {
   transition: background-color 100ms ease-out, opacity 100ms ease-out;
 }
 
-.jumbotron .right_side .button:active {
+.jumbotron .right_side .button:hover {
   background-color: hsl(220, 80%, 60%);
-  opacity: .9;
+}
+
+.jumbotron .right_side .button:active {
+  opacity: .8;
 }
 
 @media only screen and (max-width: 600px) {
@@ -459,12 +431,24 @@ nav span a:active, header div a:active {
   #classes.grey-background {
     background-color: white;
   }
+
+  #classes h1 {
+    padding: 0;
+    margin: 32px 0 16px 0;
+  }
+
+  #classes .content {
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+
   .subject_container .image_container, .subject_container .text h4, .subject_container .text p {
     display: none;
   }
 
   .subject_container {
     width: 100%;
+    margin: 0 16px 8px 16px;
   }
 
   .subject_container .text{
